# eventsrustapi

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
kubernetes/: db-configmap.yaml  db-deployment.yaml  db-persistent-volume-claim.yaml  db-persistent-volume.yaml  db-service.yaml  web-deployment.yaml  web-service.yaml
migrations/2023-08-21-120530_create_events/: up.sql
src/: main.rs
src/handlers/: handlers.rs
src/models/: event.rs  mod.rs  schema.rs
src/repository/: database.rs  mod.rs
