[package]
name = "eventsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
serde = { version = "1.0.185", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
